feat: webcite done (without adapt, valid, anim)

--- a/index.html
+++ b/index.html
@@ -770,7 +770,7 @@
                                 <li class="prices-text__item">Тех. поддержка</li>
                             </ul>
                             <!-- /.prices-list__text -->
-                            <button class="prices-list__button">Купить</button>
+                            <button class="button prices-list__button">Купить</button>
                         </div>
                         <!-- /.prices-list__item -->
                     </div>
@@ -785,7 +785,7 @@
                                 <li class="prices-text__item">Практика</li>
                             </ul>
                             <!-- /.prices-list__text -->
-                            <button class="prices-list__button">Купить</button>
+                            <button class="button prices-list__button">Купить</button>
                         </div>
                         <!-- /.prices-list__item -->
                     </div>
@@ -800,7 +800,7 @@
                                 <li class="prices-text__item">Максимум практики</li>
                             </ul>
                             <!-- /.prices-list__text -->
-                            <button class="prices-list__button">Купить</button>
+                            <button class="button prices-list__button">Купить</button>
                         </div>
                         <!-- /.prices-list__item -->
                     </div>
@@ -814,19 +814,245 @@
         <section class="section learning-form">
             <div class="section-title">
                 <h2 class="section-title__heading">Получите первые видеоуроки совершенно бесплатно уже сейчас!</h2>
-                <p class="section-title__subtitle">Станьте частью алготрейдинга прямо сейчас <br> и всего за месяц прямо на сессиях создайте своего эффективного торгового робота с нуля!</p>
+                <p class="section-title__subtitle">Просто внесите Ваши данные в форму прям сейчас, и мы сразу Вам вышлем подборку первых видеоуроков. Убедитесь сами!</p>
             </div>
             <!-- /.section-title -->
             <form action="#" class="form learning-form__form">
                 <input type="text" class="input learning-form__input" id="user-name" placeholder="Имя">
                 <input type="tel" class="input learning-form__input" id="user-phone" placeholder="Телефон">
                 <input type="email" class="input learning-form__input" id="user-mail" placeholder="Email">
-                <button class="button button--primary">Начать обучение</button> 
+                <button class="button button--primary learning-form__button">Начать обучение</button> 
             </form>
             <!-- /.form learning-form__form -->
         </section>
         <!-- /.section learning-form -->
+        <section class="section feedback">
+            <div class="container">
+                <div class="section-title">
+                    <h2 class="section-title__heading"><strong>Отзывы</strong> наших учеников</h2>
+                </div>
+                <!-- /.section-title -->
+                <!-- Slider main container -->
+                <div class="swiper feedback-swiper">
+                    <!-- Additional required wrapper -->
+                    <div class="swiper-wrapper">
+                        <!-- Slides -->
+                        <div class="swiper-slide">
+                            <div class="feedback__video video">
+                                <img src="./img/play.png" alt="Пуск видео" class="video__play">
+                            </div>
+                            <!-- /.steps__video video -->
+                            <div class="feedback-content">
+                                <h3 class="feedback-content__title">Алиса</h3>
+                                <p class="feedback-content__text">Впервые с финансовыми рынками столкнулась в 17 лет, особенно интересовали портфельные инвестиции и риск-менеджмент. Первый заработок составил 12 тысяч долларов, правда, виртуальных.</p>
+                            </div>
+                            <!-- /.feedback__content -->
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="feedback__video video">
+                                <img src="./img/play.png" alt="Пуск видео" class="video__play">
+                            </div>
+                            <!-- /.steps__video video -->
+                            <div class="feedback-content">
+                                <h3 class="feedback-content__title">Славяна</h3>
+                                <p class="feedback-content__text">Впервые с финансовыми рынками столкнулась в 17 лет, особенно интересовали портфельные инвестиции и риск-менеджмент. Первый заработок составил 12 тысяч долларов, правда, виртуальных.</p>
+                            </div>
+                            <!-- /.feedback__content -->
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="feedback__video video">
+                                <img src="./img/play.png" alt="Пуск видео" class="video__play">
+                            </div>
+                            <!-- /.steps__video video -->
+                            <div class="feedback-content">
+                                <h3 class="feedback-content__title">Лена</h3>
+                                <p class="feedback-content__text">Впервые с финансовыми рынками столкнулась в 17 лет, особенно интересовали портфельные инвестиции и риск-менеджмент. Первый заработок составил 12 тысяч долларов, правда, виртуальных.</p>
+                            </div>
+                            <!-- /.feedback__content -->
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="feedback__video video">
+                                <img src="./img/play.png" alt="Пуск видео" class="video__play">
+                            </div>
+                            <!-- /.steps__video video -->
+                            <div class="feedback-content">
+                                <h3 class="feedback-content__title">Мику</h3>
+                                <p class="feedback-content__text">Впервые с финансовыми рынками столкнулась в 17 лет, особенно интересовали портфельные инвестиции и риск-менеджмент. Первый заработок составил 12 тысяч долларов, правда, виртуальных.</p>
+                            </div>
+                            <!-- /.feedback__content -->
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="feedback__video video">
+                                <img src="./img/play.png" alt="Пуск видео" class="video__play">
+                            </div>
+                            <!-- /.steps__video video -->
+                            <div class="feedback-content">
+                                <h3 class="feedback-content__title">Ульяна</h3>
+                                <p class="feedback-content__text">Впервые с финансовыми рынками столкнулась в 17 лет, особенно интересовали портфельные инвестиции и риск-менеджмент. Первый заработок составил 12 тысяч долларов, правда, виртуальных.</p>
+                            </div>
+                            <!-- /.feedback__content -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- /.section feedback -->
+        <section class="section results">
+            <div class="container">
+                <div class="results-container">
+                    <div class="col">
+                        <div class="section-title--left">
+                            <h2 class="section-title__heading"><strong>Результаты</strong> наших учеников</h2>
+                            <p class="section-title__subtitle">С нами наши ученики научились эффективно торговать на международных рынках</p>
+                        </div>
+                        <!-- /.section-title -->
+                    </div>
+                    <!-- /.col -->
+                    <div class="row">
+                        <div class="col results-examples">
+                            <img src="./img/results-img1.jpeg" alt="Пример" class="results-examples__img">
+                            <h3 class="results-examples__name">Мария, январь 2019</h3>
+                            <p class="results-examples__text">Методом проб и ошибок смог определить необходимые качества успешного трейдера, 70% которых составляет психологическая и эмоциональная устойчивость во время трейдинга</p>
+                        </div>
+                        <!-- /.col results-examples -->
+                        <div class="col results-examples">
+                            <img src="./img/results-img2.jpeg" alt="Пример" class="results-examples__img">
+                            <h3 class="results-examples__name">Иван, январь 2019</h3>
+                            <p class="results-examples__text">Алготрейдинг — это свежее дыхание в мире финансовой аналитики, новые научные подходы к обучению и только качественная информация</p>
+                        </div>
+                        <!-- /.col results-examples -->
+                    </div>
+                    <!-- /.row -->
+                </div>
+                <!-- /.row -->
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- /.section results -->
+        <section class="section cashback">
+            <div class="container">
+                <div class="section-title">
+                    <h2 class="section-title__heading">Мы вернем Вам 100% вложенных средств, если Вам не понравятся первые 3 урока</h2>
+                    <button class="button button--primary">Приступить к созданию своего доходного робота</button>
+                </div>
+                <!-- /.section-title -->
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- /.section cashback -->
+        <section class="section prices">
+            <div class="container">
+                <div class="section-title">
+                    <h2 class="section-title__heading"><strong>Сколько</strong>  стоит обучение?</h2>
+                    <p class="section-title__subtitle">Станьте частью алготрейдинга прямо сейчас <br> и всего за месяц прямо на сессиях создайте своего эффективного торгового робота с нуля!</p>
+                </div>
+                <!-- /.section-title -->
+                <div class="row">
+                    <div class="col-30">
+                        <div class="prices-list__item">
+                            <h3 class="prices-list__title">Gold</h3>
+                            <span class="prices-list__price">$297</span>
+                            <ul class="prices-text">
+                                <li class="prices-text__item">Начитка лекций</li>
+                                <li class="prices-text__item">Практика</li>
+                                <li class="prices-text__item">Ответы на вопросы</li>
+                                <li class="prices-text__item">Тех. поддержка</li>
+                            </ul>
+                            <!-- /.prices-list__text -->
+                            <button class="button prices-list__button">Купить</button>
+                        </div>
+                        <!-- /.prices-list__item -->
+                    </div>
+                    <!-- /.col-30 -->
+                    <div class="col-30">
+                        <div class="prices-list__item">
+                            <h3 class="prices-list__title">Premium</h3>
+                            <span class="prices-list__price">$497</span>
+                            <ul class="prices-text">
+                                <li class="prices-text__item">Обучение с куратором</li>
+                                <li class="prices-text__item">Постоянная возможность связаться с преподователем</li>
+                                <li class="prices-text__item">Практика</li>
+                            </ul>
+                            <!-- /.prices-list__text -->
+                            <button class="button prices-list__button">Купить</button>
+                        </div>
+                        <!-- /.prices-list__item -->
+                    </div>
+                    <!-- /.col-30 -->
+                    <div class="col-30">
+                        <div class="prices-list__item">
+                            <h3 class="prices-list__title">VIP</h3>
+                            <span class="prices-list__price">$997</span>
+                            <ul class="prices-text">
+                                <li class="prices-text__item">Полностью индивидуальное обучение!</li>
+                                <li class="prices-text__item">Индивидуальная <br> программа </li>
+                                <li class="prices-text__item">Максимум практики</li>
+                            </ul>
+                            <!-- /.prices-list__text -->
+                            <button class="button prices-list__button">Купить</button>
+                        </div>
+                        <!-- /.prices-list__item -->
+                    </div>
+                    <!-- /.col-30 -->
+                </div>
+                <!-- /.row -->
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- /.section prices -->
+        <section class="section questions">
+            <div class="container">
+                <div class="section-title">
+                    <h2 class="section-title__heading">Остались вопросы?</h2>
+                    <p class="section-title__subtitle">Оставьте свои контактные данные и мы с Вами свяжемся в самое ближайшее время</p>
+                </div>
+                <!-- /.section-title -->
+                <form action="#" class="form questions-form__form">
+                    <input type="text" class="input learning-form__input" id="question-user-name" placeholder="Имя">
+                    <input type="tel" class="input learning-form__input" id="question-user-phone" placeholder="Телефон">
+                    <input type="email" class="input learning-form__input" id="question-user-mail" placeholder="Email">
+                    <button class="button button--primary learning-form__button">Свяжитесь со мной</button> 
+                </form>
+                <!-- /.form learning-form__form -->
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- /.section questions -->
     </main>
+    <footer class="section footer">
+        <div class="container">
+            <div class="row footer-upper">
+                <h2 class="footer-upper__title">Алготрейдинг</h2>
+                <input type="email" class="footer-upper__email" placeholder="E-mail рассылка">
+            </div>
+            <!-- /.row footer-upper-->
+            <div class="row footer-below">
+                <p class="footer-below__subtitle">Обучение алгоритмической торговле</p>
+                <div class="footer-contacts">
+                    <a href="#" class="footer-contacts__item">Аналитика</a>
+                    <a href="#" class="footer-contacts__item">О проекте</a>
+                    <a href="#" class="footer-contacts__item">Контакты</a>
+                </div>
+                <!-- /.footer-below__contacts -->
+                <div class="footer-links">
+                    <a href="#" class="footer-links__item">Вопросы и ответы</a>
+                    <a href="#" class="footer-links__item">Записаться на курс</a>
+                </div>
+                <!-- /.footer-links -->
+                <div class="footer-social">
+                    <a href="#" class="footer-social__link"></a>
+                    <a href="#" class="footer-social__link"></a>
+                    <a href="#" class="footer-social__link"></a>
+                    <a href="#" class="footer-social__link"></a>
+                    <a href="#" class="footer-social__link"></a>
+                </div>
+                <!-- /.footer-social -->
+            </div>
+            <!-- /.row footer-below -->
+        </div>
+        <!-- /.container -->
+    </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
