--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
     <title>AlgoTrading</title>
 </head>
@@ -17,14 +18,14 @@
         <div class="container">
             <div class="menu">
                 <div class="logo menu__logo">
-                    <img src="./img/logo.png" alt="Лого" class="logo__img">
+                    <a href="index.html" class="logo__link"><img src="./img/logo.png" alt="Лого" class="logo__img"></a>
                     <p class="logo__text">алготрейдинг</p>
                 </div>
                 <!-- /.logo menu__logo -->
                 <div class="menu__nav">
-                    <a href="#" class="nav__item">Обучение торговле</a>
-                    <a href="#" class="nav__item">Аналитика</a>
-                    <a href="#" class="nav__item">О проекте</a>
+                    <a href="#format" class="nav__item">Обучение торговле</a>
+                    <a href="#results" class="nav__item">Аналитика</a>
+                    <a href="#steps" class="nav__item">О проекте</a>
                 </div>
                 <!-- /.menu__nav -->
                 <div class="contacts menu__contacts">
@@ -38,13 +39,14 @@
     </header>
     <!-- /.header -->
     <main>
+        <a id="button"></a>
         <section class="section hero">
             <div class="container">
                 <div class="hero__content">
-                    <h1 class="title hero__title">Курс алготрейдинга</h1>
-                    <h3 class="hero__subtitle">обучение алгоритмической торговле</h3>
+                    <h1 class="title hero__title wow animate__animated animate__fadeInLeft" data-wow-delay="0.1s">Курс алготрейдинга</h1>
+                    <h3 class="hero__subtitle wow animate__animated animate__fadeInLeft" data-wow-delay="0.3">обучение алгоритмической торговле</h3>
                     <p class="hero__desc">Всего за месяц прямо на сессиях создайте своего эффективного торгового робота с нуля!</p>
-                    <div class="hero__call">
+                    <div class="hero__call wow animate__animated animate__fadeInLeft" data-wow-delay="0.5s">
                         <div class="call__button">
                             <button class="button hero__button button--primary">Начать обучение</button>
                             <button class="button hero__button button--secondary">узнать подробнее</button>
@@ -58,20 +60,20 @@
                 <div class="hero-subcontent">
                     <div class="cards hero-subcontent__advantages">
                         <div class="row">
-                            <div class="card">
+                            <div class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.1s">
                                 <h5 class="card-title">95 <span class="percent--strong">%</span></h5>
                                 <p class="card-subtitle">Увеличение прибыли на финансовых рынках</p>
                                 <p class="card-text">Отсутствие эмоций у робота позволяет в разы увеличить эффективность</p>
                                 </div>
                             <!-- /.card -->
-                            <div class="card">
+                            <div class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.3s">
                                 <img src="./img/advantage-1.png" alt="Преимущество" class="card-img">
                                 <p class="card-subtitle card-subtitle--lighterW"><strong>Глубокий</strong>  анализ <br>
                                     и скорость</p>
                                 <p class="card-text">Полноценный анализ финансовых инструментов по разработанным математическим алгоритмам за доли секунд</p>
                                 </div>
                             <!-- /.card -->
-                            <div class="card">
+                            <div class="card wow animate__animated animate__fadeInUp" data-wow-delay="0.5s">
                                 <img src="./img/advantage-2.png" alt="Преимущество" class="card-img card-img--last">
                                 <p class="card-subtitle card-subtitle--lighterW"><strong>Максимальный</strong>
                                     инструментарий</p>
@@ -90,7 +92,7 @@
         <!-- /.hero -->
         <section class="section creation">
             <div class="container">
-                <div class="section-title">
+                <div class="section-title wow animate__animated animate__fadeIn" data-wow-delay="0.1s">
                     <h2 class="section-title__heading">Создайте своего <br> авторского торгового робота</h2>
                     <p class="section-title__subtitle">получайте прибыль даже с нулевыми знаниями в сфере алгоритмической торговли</p>
                 </div>
@@ -152,7 +154,7 @@
         <!-- /.creation-learning -->
         <section class="section benefits">
             <div class="container">
-                <h2 class="section-title__heading"><strong>Какие выгоды </strong> я получу<br> от создания своего робота?</h2>
+                <h2 class="section-title__heading wow animate__animated animate__fadeIn" data-wow-delay="0.1s""><strong>Какие выгоды </strong> я получу<br> от создания своего робота?</h2>
                 <div class="benefits-swiper">
                     <!-- Slider main container -->
                     <div class="swiper swiper-benefits">
@@ -198,19 +200,19 @@
             <!-- /.container -->
         </section>
         <!-- /.section benefits -->
-        <section class="section steps">
+        <section id="steps" class="section steps">
             <div class="container">
-                <div class="section-title">
+                <div class="section-title wow animate__animated animate__fadeIn" data-wow-delay="0.1s">
                     <h2 class="section-title__heading"><strong>Всё</strong> очень просто</h2>
                     <p class="section-title__subtitle">Никаких лишних движений во время обучения. Мы с Вами будем чётко следовать по разработанной нами карте обучения.</p>
                 </div>
                 <!-- /.section-title -->
                 <ul class="stpes-list">
-                    <li class="steps-list__item">Создание робота</li>
-                    <li class="steps-list__item">Внедрение</li>
-                    <li class="steps-list__item">Оптимизация</li>
-                    <li class="steps-list__item">Запуск</li>
-                    <li class="steps-list__item">Прибыль</li>
+                    <li class="steps-list__item wow animate__animated animate__fadeInLeft" data-wow-delay="0.1s">Создание робота</li>
+                    <li class="steps-list__item wow animate__animated animate__fadeInLeft" data-wow-delay="0.3s">Внедрение</li>
+                    <li class="steps-list__item wow animate__animated animate__fadeInLeft" data-wow-delay="0.5s">Оптимизация</li>
+                    <li class="steps-list__item wow animate__animated animate__fadeInLeft" data-wow-delay="0.8s">Запуск</li>
+                    <li class="steps-list__item wow animate__animated animate__fadeInLeft" data-wow-delay="1.1s">Прибыль</li>
                 </ul>
                 <!-- /.stpes-list -->
                 <div class="steps__video video">
@@ -227,15 +229,15 @@
             <!-- /.container -->
         </section>
         <!-- /.section steps -->
-        <section class="section format">
+        <section id="format" class="section format">
             <div class="container">
                 <div class="section-title">
-                    <h2 class="section-title__heading">Формат обучения</h2>
+                    <h2 class="section-title__heading wow animate__animated animate__fadeIn" data-wow-delay="0.1s"">Формат обучения</h2>
                 </div>
                 <!-- /.section-title -->
                 <div class="row cards">
                     <div class="col-50">
-                        <div class="format-card format-card__test">
+                        <div class="format-card format-card__test wow animate__animated animate__fadeInLeft" data-wow-delay="0.1s">
                             <h3 class="format-card__title">Тестирование алгоритмов</h3>
                             <p class="format-card__text">Форвардное и стрессовое тестирование торговых роботов на практике</p>
                         </div>
@@ -243,7 +245,7 @@
                     </div>
                     <!-- /.col-50 -->
                     <div class="col">
-                        <div class="format-card format-card__help">
+                        <div class="format-card format-card__help wow animate__animated animate__fadeInRight" data-wow-delay="0.1s">
                             <h3 class="format-card__title">Помощь преподавателей</h3>
                             <p class="format-card__text">Ученик всегда может обратиться к наставнику с вопросом и получить точный, своевременный ответ</p>
                         </div>
@@ -283,7 +285,7 @@
             <!-- /.container -->
         </section>
         <!-- /.section format -->
-        <section class="section view">
+        <section id="view" class="section view">
             <div class="container">
                 <div class="section-title--left">
                     <h2 class="section-title__heading"><strong>Как выглядит</strong> Ваш процесс обучения алготрейдингу?</h2>
@@ -695,7 +697,7 @@
         <!-- /.section lessons -->
         <section class="section advantage">
             <div class="container">
-                <div class="section-title">
+                <div class="section-title wow animate__animated animate__fadeIn" data-wow-delay="0.1s">
                     <h2 class="section-title__heading">Преимущества курса</h2>
                 </div>
                 <!-- /.section-title -->
@@ -726,7 +728,7 @@
                     <p class="section-title__subtitle">Результат</p>  
                     <div class="advantage-list__container">
                         <div class="advantage-list__item">
-                            <img src="./img/adrobot.svg" alt="Звезда" class="advantage-list__img">
+                            <img src="./img/robot1.svg" alt="Звезда" class="advantage-list__img">
                             <h3 class="advantage-list__title">Авторские роботы.</h3>
                             <p class="advantage-list__text">Получите авторских торговых роботов алготрейдинга, успешно торгующих с 2013 года</p>
                         </div>
@@ -753,14 +755,14 @@
         <!-- /.section advantage -->
         <section class="section prices">
             <div class="container">
-                <div class="section-title">
+                <div class="section-title wow animate__animated animate__fadeIn" data-wow-delay="0.1s">
                     <h2 class="section-title__heading"><strong>Сколько</strong>  стоит обучение?</h2>
                     <p class="section-title__subtitle">Станьте частью алготрейдинга прямо сейчас <br> и всего за месяц прямо на сессиях создайте своего эффективного торгового робота с нуля!</p>
                 </div>
                 <!-- /.section-title -->
                 <div class="row">
                     <div class="col-30">
-                        <div class="prices-list__item">
+                        <div class="prices-list__item wow animate__animated animate__fadeInUp" data-wow-delay="0.1s">
                             <h3 class="prices-list__title">Gold</h3>
                             <span class="prices-list__price">$297</span>
                             <ul class="prices-text">
@@ -776,7 +778,7 @@
                     </div>
                     <!-- /.col-30 -->
                     <div class="col-30">
-                        <div class="prices-list__item">
+                        <div class="prices-list__item wow animate__animated animate__fadeInUp" data-wow-delay="0.3s">
                             <h3 class="prices-list__title">Premium</h3>
                             <span class="prices-list__price">$497</span>
                             <ul class="prices-text">
@@ -791,7 +793,7 @@
                     </div>
                     <!-- /.col-30 -->
                     <div class="col-30">
-                        <div class="prices-list__item">
+                        <div class="prices-list__item wow animate__animated animate__fadeInUp" data-wow-delay="0.5s">
                             <h3 class="prices-list__title">VIP</h3>
                             <span class="prices-list__price">$997</span>
                             <ul class="prices-text">
@@ -818,9 +820,18 @@
             </div>
             <!-- /.section-title -->
             <form action="#" class="form learning-form__form">
-                <input type="text" class="input learning-form__input" id="user-name" placeholder="Имя">
-                <input type="tel" class="input learning-form__input" id="user-phone" placeholder="Телефон">
-                <input type="email" class="input learning-form__input" id="user-mail" placeholder="Email">
+                <div class="input-group learning-form-input-group">
+                    <input type="text" name="userName" class="input learning-form__input" id="user-name" placeholder="Имя">
+                </div>
+                <!-- /.input-group learning-input-group -->
+                <div class="input-group learning-form-input-group">
+                    <input type="tel" name="userPhone" class="input learning-form__input" id="user-phone" placeholder="Телефон">
+                </div>
+                <!-- /.input-group learning-input-group -->
+                <div class="input-group learning-form-input-group">
+                    <input type="email" name="userEmail" class="input learning-form__input" id="user-mail" placeholder="Email">
+                </div>
+                <!-- /.input-group learning-input-group -->
                 <button class="button button--primary learning-form__button">Начать обучение</button> 
             </form>
             <!-- /.form learning-form__form -->
@@ -828,7 +839,7 @@
         <!-- /.section learning-form -->
         <section class="section feedback">
             <div class="container">
-                <div class="section-title">
+                <div class="section-title wow animate__animated animate__fadeIn" data-wow-delay="0.1s"">
                     <h2 class="section-title__heading"><strong>Отзывы</strong> наших учеников</h2>
                 </div>
                 <!-- /.section-title -->
@@ -898,7 +909,7 @@
             <!-- /.container -->
         </section>
         <!-- /.section feedback -->
-        <section class="section results">
+        <section id="results" class="section results">
             <div class="container">
                 <div class="results-container">
                     <div class="col">
@@ -943,14 +954,14 @@
         <!-- /.section cashback -->
         <section class="section prices">
             <div class="container">
-                <div class="section-title">
+                <div class="section-title wow animate__animated animate__fadeIn" data-wow-delay="0.1s">
                     <h2 class="section-title__heading"><strong>Сколько</strong>  стоит обучение?</h2>
                     <p class="section-title__subtitle">Станьте частью алготрейдинга прямо сейчас <br> и всего за месяц прямо на сессиях создайте своего эффективного торгового робота с нуля!</p>
                 </div>
                 <!-- /.section-title -->
                 <div class="row">
                     <div class="col-30">
-                        <div class="prices-list__item">
+                        <div class="prices-list__item wow animate__animated animate__fadeInUp" data-wow-delay="0.1s">
                             <h3 class="prices-list__title">Gold</h3>
                             <span class="prices-list__price">$297</span>
                             <ul class="prices-text">
@@ -966,7 +977,7 @@
                     </div>
                     <!-- /.col-30 -->
                     <div class="col-30">
-                        <div class="prices-list__item">
+                        <div class="prices-list__item wow animate__animated animate__fadeInUp" data-wow-delay="0.3s">
                             <h3 class="prices-list__title">Premium</h3>
                             <span class="prices-list__price">$497</span>
                             <ul class="prices-text">
@@ -981,7 +992,7 @@
                     </div>
                     <!-- /.col-30 -->
                     <div class="col-30">
-                        <div class="prices-list__item">
+                        <div class="prices-list__item wow animate__animated animate__fadeInUp" data-wow-delay="0.5s">
                             <h3 class="prices-list__title">VIP</h3>
                             <span class="prices-list__price">$997</span>
                             <ul class="prices-text">
@@ -1009,9 +1020,18 @@
                 </div>
                 <!-- /.section-title -->
                 <form action="#" class="form questions-form__form">
-                    <input type="text" class="input learning-form__input" id="question-user-name" placeholder="Имя">
-                    <input type="tel" class="input learning-form__input" id="question-user-phone" placeholder="Телефон">
-                    <input type="email" class="input learning-form__input" id="question-user-mail" placeholder="Email">
+                    <div class="input group questions-form-group">
+                        <input type="text" name="userName" class="input learning-form__input" id="question-user-name" placeholder="Имя">
+                    </div>
+                    <!-- /.input group questions-form-group -->
+                    <div class="input group questions-form-group">
+                        <input type="tel" name="userPhone" class="input learning-form__input" id="question-user-phone" placeholder="Телефон">
+                    </div>
+                    <!-- /.input group questions-form-group -->
+                    <div class="input group questions-form-group">
+                        <input type="email" name="userEmail" class="input learning-form__input" id="question-user-mail" placeholder="Email">
+                    </div>
+                    <!-- /.input group questions-form-group -->
                     <button class="button button--primary learning-form__button">Свяжитесь со мной</button> 
                 </form>
                 <!-- /.form learning-form__form -->
@@ -1024,7 +1044,7 @@
         <div class="container">
             <div class="row footer-upper">
                 <h2 class="footer-upper__title">Алготрейдинг</h2>
-                <input type="email" class="footer-upper__email" placeholder="E-mail рассылка">
+                <input type="email" name="userEmail" class="footer-upper__email" placeholder="E-mail рассылка">
             </div>
             <!-- /.row footer-upper-->
             <div class="row footer-below">
@@ -1055,6 +1075,8 @@
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+    <script src="js/wow.min.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
